# cyber-ai-portfolio

./: README.md
hackthebox/: pyproject.toml
hackthebox/malware_class/: Untitled.ipynb
hackthebox/malware_class/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
hackthebox/network_anon/: NetworkAnomalyDetection.ipynb
hackthebox/sentiment_analyse/: README.md  Untitled.ipynb  train_sentiment_model.py
hackthebox/sentiment_analyse/.ipynb_checkpoints/: train_sentiment_model-checkpoint.py
hackthebox/spam_detection/: SpamFilter.ipynb
