[tool.poetry]
package-mode = false

[project]
name = "hackthebox"
version = "0.1.0"
description = ""
authors = [
    {name = "Botman-Hotman",email = "application.jef71@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "transformers (>=5.8.0,<6.0.0)",
    "datasets (>=4.8.5,<5.0.0)",
    "accelerate (>=1.13.0,<2.0.0)",
    "evaluate (>=0.4.6,<0.5.0)",
    "optimum (>=2.1.0,<3.0.0)",
    "huggingface-hub (>=1.14.0,<2.0.0)",
    "nltk (>=3.9.4,<4.0.0)",
    "category-encoders (>=2.9.0,<3.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "torchaudio (>=2.11.0,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyterlab (>=4.5.7,<5.0.0)",
    "notebook (>=7.5.6,<8.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "split-folders (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

